// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
        id="ecl-carousel-slider"
      >
        <div
          aria-label="slide 1 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-box ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Lorem ipsum dolor sit amet
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-overlay ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Duis vitae pulvinar turpis
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-overlay ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Donec maximus pharetra ex a ultricies
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-carousel__prev ecl-button--icon-only"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Previous slides
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
    <button
      class="ecl-button ecl-button--ghost ecl-carousel__next ecl-button--icon-only"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Next slides
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-carousel__controls"
    >
      <div
        class="ecl-container"
      >
        <div
          class="ecl-carousel__autoplay"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__play ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Play carousel
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#play"
                />
              </svg>
            </span>
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__pause ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Pause carousel
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#pause"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ecl-carousel__navigation"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            1
          
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            2
          
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            3
          
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Carousel Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
        id="ecl-carousel-slider"
      >
        <div
          aria-label="slide 1 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-box ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Lorem ipsum dolor sit amet
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-overlay ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Duis vitae pulvinar turpis
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-overlay ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Donec maximus pharetra ex a ultricies
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-carousel__prev ecl-button--icon-only"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Previous slides
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
    <button
      class="ecl-button ecl-button--ghost ecl-carousel__next ecl-button--icon-only"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Next slides
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-carousel__controls"
    >
      <div
        class="ecl-container"
      >
        <div
          class="ecl-carousel__autoplay"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__play ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Play carousel
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#play"
                />
              </svg>
            </span>
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__pause ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Pause carousel
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#pause"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ecl-carousel__navigation"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            1
          
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            2
          
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            3
          
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Carousel Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-carousel custom-class custom-class--test"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
        id="ecl-carousel-slider"
      >
        <div
          aria-label="slide 1 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-box ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Lorem ipsum dolor sit amet
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-overlay ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Duis vitae pulvinar turpis
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-banner ecl-banner--text-overlay ecl-banner--m"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
              >
                <small>
                  © Copyright or credit
                </small>
              </footer>
            </figure>
            <div
              class="ecl-container"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Donec maximus pharetra ex a ultricies
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-carousel__prev ecl-button--icon-only"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Previous slides
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
    <button
      class="ecl-button ecl-button--ghost ecl-carousel__next ecl-button--icon-only"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Next slides
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-carousel__controls"
    >
      <div
        class="ecl-container"
      >
        <div
          class="ecl-carousel__autoplay"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__play ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Play carousel
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#play"
                />
              </svg>
            </span>
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__pause ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Pause carousel
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#pause"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ecl-carousel__navigation"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            1
          
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            2
          
          </button>
          <button
            class="ecl-button ecl-button--ghost ecl-carousel__navigation-item"
          >
            
            3
          
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
